deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: nischaybl18/flaskapp:latest
        ports:
        - containerPort: 8080
        ##volumeMounts:
        ##- name: jenkins-home
          ##mountPath: /var/jenkins_home
      ##volumes:
      ##- name: jenkins-home
        ##emptyDir: { }
