services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
spec:
  selector:
    app: flaskapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: Nodeport
