ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
spec:
	rules:
	  - host: localhost:32316
			http:
			paths:
			- backend:
				serviceName: flaskapp
				servicePort: 8080
